--- a/test.html
+++ b/test.html
@@ -6,10 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Texto comun</h1>
-    <h1 style="position: relative; top: 10px">
-      Texto 10 px para baixo da segunda linha !
-    </h1>
-    <h1>Texto Comun</h1>
+    <script src="./testfile.js"></script>
   </body>
 </html>
